--- a/package.json
+++ b/package.json
@@ -3,24 +3,12 @@
   "version": "1.0.0",
   "description": "Application to keep food out of the garbage and into hungry mouths.",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.23.3",
-    "@babel/preset-env": "^7.23.3",
-    "@babel/preset-react": "^7.23.3",
-    "@react-google-maps/api": "^2.19.2",
-    "@reduxjs/toolkit": "^1.9.7",
-    "@types/react": "^18.2.38",
-    "@types/react-router-dom": "^5.3.3",
-    "axios": "^1.6.2",
     "babel-loader": "^9.1.3",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
@@ -39,20 +27,10 @@
     "react-cookie": "^6.1.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
-    "react-places-autocomplete": "^7.3.0",
-    "react-redux": "^8.1.3",
-    "react-router": "^6.20.0",
-    "react-router-dom": "^6.20.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.3.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
-  },
-  "devDependencies": {
-    "typescript": "^5.3.2",
-    "@types/react-dom": "^18.2.17"
   }
 }
