--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "Application to keep food out of the garbage and into hungry mouths.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "concurrently \"NODE_ENV=development webpack-dev-server --open --hot --color \" \"nodemon ./server/server.js\"",
-    "prod": "concurrently \"NODE_ENV=production webpack-dev-server --open --hot --color \" \"nodemon ./server/server.js\""
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +33,7 @@
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "next": "^14.0.3",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
@@ -49,6 +53,6 @@
     "webpack-dev-server": "^4.15.1"
   },
   "devDependencies": {
-    "@types/react-dom": "^18.2.17"
+    "typescript": "^5.3.2"
   }
 }
