--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Application to keep food out of the garbage and into hungry mouths.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently \"NODE_ENV=development webpack-dev-server --open --hot --color \" \"nodemon ./server/server.js\"",
+    "prod": "concurrently \"NODE_ENV=production webpack-dev-server --open --hot --color \" \"nodemon ./server/server.js\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
@@ -29,6 +33,7 @@
     "react-dom": "^18.2.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
