--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
+    "@types/react": "^18.2.38",
+    "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^9.1.3",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
@@ -31,11 +33,17 @@
     "react-cookie": "^6.1.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
+    "react-router": "^6.20.0",
+    "react-router-dom": "^6.20.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
+    "typescript": "^5.3.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "devDependencies": {
+    "@types/react-dom": "^18.2.17"
   }
 }
