--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "babel-loader": "^9.1.3",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
@@ -23,6 +25,7 @@
     "html-webpack-plugin": "^5.5.3",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-cookies": "^0.1.1",
