--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/react": "^18.2.38",
     "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^9.1.3",
@@ -33,6 +34,7 @@
     "react-cookie": "^6.1.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
     "sass-loader": "^13.3.2",
