--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react": "^18.2.38",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.2",
     "babel-loader": "^9.1.3",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
