--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Application to keep food out of the garbage and into hungry mouths.",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "concurrently \"NODE_ENV=development webpack-dev-server --open --hot --color \" \"nodemon ./server/server.js\"",
     "prod": "concurrently \"NODE_ENV=production webpack-dev-server --open --hot --color \" \"nodemon ./server/server.js\""
@@ -31,7 +31,6 @@
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
-    "next": "^14.0.3",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
@@ -51,9 +50,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "devDependencies": {
+    "typescript": "^5.3.2",
     "@types/react-dom": "^18.2.17"
-  },
-  "devDependencies": {
-    "typescript": "^5.3.2"
   }
 }
