--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.1",
+    "bfg": "^0.3.0",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
@@ -22,6 +23,7 @@
     "eslint": "^8.54.0",
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
+    "git-filter-repo": "^0.0.30",
     "html-webpack-plugin": "^5.5.3",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
