--- a/package.json
+++ b/package.json
@@ -5,54 +5,55 @@
     "main": "index.js",
     "type": "commonjs",
     "scripts": {
-      "dev": "concurrently \"NODE_ENV=development webpack-dev-server --open --hot --color \" \"nodemon ./server/server.js\"",
-      "prod": "concurrently \"NODE_ENV=production webpack-dev-server --open --hot --color \" \"nodemon ./server/server.js\""
+        "dev": "concurrently \"NODE_ENV=development webpack-dev-server --open --hot --color \" \"nodemon ./server/server.js\"",
+        "prod": "concurrently \"NODE_ENV=production webpack-dev-server --open --hot --color \" \"nodemon ./server/server.js\""
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "@babel/core": "^7.23.3",
-      "@babel/preset-env": "^7.23.3",
-      "@babel/preset-react": "^7.23.3",
-      "@react-google-maps/api": "^2.19.2",
-      "@reduxjs/toolkit": "^1.9.7",
-      "@types/react": "^18.2.38",
-      "@types/react-router-dom": "^5.3.3",
-      "axios": "^1.6.2",
-      "babel-loader": "^9.1.3",
-      "bcrypt": "^5.1.1",
-      "body-parser": "^1.20.2",
-      "concurrently": "^8.2.2",
-      "cookie-parser": "^1.4.6",
-      "cors": "^2.8.5",
-      "css-loader": "^6.8.1",
-      "dotenv": "^16.3.1",
-      "env": "^0.0.2",
-      "eslint": "^8.54.0",
-      "express": "^4.18.2",
-      "file-loader": "^6.2.0",
-      "html-webpack-plugin": "^5.5.3",
-      "nodemon": "^3.0.1",
-      "path": "^0.12.7",
-      "pg": "^8.11.3",
-      "react": "^18.2.0",
-      "react-cookie": "^6.1.1",
-      "react-cookies": "^0.1.1",
-      "react-dom": "^18.2.0",
-      "react-places-autocomplete": "^7.3.0",
-      "react-redux": "^8.1.3",
-      "react-router": "^6.20.0",
-      "react-router-dom": "^6.20.0",
-      "sass-loader": "^13.3.2",
-      "style-loader": "^3.3.3",
-      "ts-loader": "^9.5.1",
-      "typescript": "^5.3.2",
-      "webpack": "^5.89.0",
-      "webpack-cli": "^5.1.4",
-      "webpack-dev-server": "^4.15.1"
+        "@babel/core": "^7.23.3",
+        "@babel/preset-env": "^7.23.3",
+        "@babel/preset-react": "^7.23.3",
+        "@google-cloud/storage": "^7.6.0",
+        "@react-google-maps/api": "^2.19.2",
+        "@reduxjs/toolkit": "^1.9.7",
+        "@types/react": "^18.2.38",
+        "@types/react-router-dom": "^5.3.3",
+        "axios": "^1.6.2",
+        "babel-loader": "^9.1.3",
+        "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.2",
+        "concurrently": "^8.2.2",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "css-loader": "^6.8.1",
+        "dotenv": "^16.3.1",
+        "env": "^0.0.2",
+        "eslint": "^8.54.0",
+        "express": "^4.18.2",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.5.3",
+        "nodemon": "^3.0.1",
+        "path": "^0.12.7",
+        "pg": "^8.11.3",
+        "react": "^18.2.0",
+        "react-cookie": "^6.1.1",
+        "react-cookies": "^0.1.1",
+        "react-dom": "^18.2.0",
+        "react-places-autocomplete": "^7.3.0",
+        "react-redux": "^8.1.3",
+        "react-router": "^6.20.0",
+        "react-router-dom": "^6.20.0",
+        "sass-loader": "^13.3.2",
+        "style-loader": "^3.3.3",
+        "ts-loader": "^9.5.1",
+        "typescript": "^5.3.2",
+        "webpack": "^5.89.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1"
     },
     "devDependencies": {
-      "typescript": "^5.3.2",
-      "@types/react-dom": "^18.2.17"
+        "@types/react-dom": "^18.2.17",
+        "typescript": "^5.3.2"
     }
-  }
+}
