--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 *.env
 node_modules
 .DS_Store
+Neighbour-Food/server/empirical-radio-406002-62edab3ef56a.json
+server/empirical-radio-406002-62edab3ef56a.json
